# saasaparilla.support-portal

./: .gitignore  Cargo.toml  README.md  TODO.md  mise.toml
.github/: pull_request_template.md
architecture/: diagrams.d2  mise.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/api/: mod.rs
crates/app/src/authn/: credentials.rs  mod.rs
crates/app/src/authz/: mod.rs
crates/app/src/authz/rbac/: mod.rs
crates/app/src/database/: memory.rs  mod.rs
crates/app/src/frontend/: mod.rs
crates/app/src/job/: mod.rs
crates/app/src/job/dockerd/: mod.rs
crates/app/src/job/kubernetes/: mod.rs
crates/app/src/job/noop/: mod.rs
crates/app/src/job/shell/: mod.rs
