[workspace]
members = [
  "crates/*",
]
resolver = "3"

[workspace.package]
name = "saasaparilla-support-portal"
version = "0.1.0"
edition = "2024"
license = "(SSPL-1.0 AND PolyForm-Noncommercial-1.0.0) OR PolyForm-Internal-Use-1.0.0"
authors = ["Nyefan"]
homepage = "https://github.com/SaaSaparilla/saasaparilla.support-portal"
repository = "https://github.com/SaaSaparilla/saasaparilla.support-portal"
readme = "README.md"
rust-version = "1.93.1"
publish = false

[workspace.dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
gray_matter = "0.3.2"
itertools = "0.14.0"
kube = "3.0.1"
rstest = "0.26.1"
sqlx = "0.8.6"
sycamore = "0.9.2"
tokio = "1.49.0"
tracing = "0.1.44"

# kube requires these libraries to be imported directly instead of re-exporting
# see https://github.com/kube-rs/kube/issues/1611 and https://github.com/kube-rs/kube/pull/1613
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
schemars = "1.2.1"
